# dkt_scraper

./: CMakeLists.txt  adjustment.cpp  adjustment.hpp  extract.cpp  extract.hpp  fetch.cpp  fetch.hpp  interpret.cpp  main.cpp  name_list.cpp  name_list.hpp  win_loss_records.cpp  win_loss_records.hpp
